<resources>
    <string name="app_name" translatable="false">Offering</string>
    <string name="settings">Offering configuration</string>
    <string name="show_home">Show home offers</string>
    <string name="show_electro">Show electronics offers</string>
    <string name="show_sport">Show sports offers</string>
    <string name="show_import">Show offers importance</string>
    <string name="must_select">You must select at least one offer type</string>
    <string name="must_input">You must input all fields</string>

    <string name="error">Could not add offer</string>

    <string name="add">Add</string>

    <string name="name">Name</string>
    <string name="shop">Shop</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="importance">Importance</string>

    <string name="home">Home</string>
    <string name="sport">Sport</string>
    <string name="electro">Electronics</string>

    <string name="important">Important</string>
    <string name="very_important">Very important</string>
    <string name="not_important">Not important</string>

    <string name="order_type">Order by offer type</string>
    <string name="order_asc">Order by ascending name</string>
    <string name="order_desc">Order by descending name</string>

    <string name="get_info">App information</string>
    <string name="info">App developed by José Antonio Barranquero Fernández</string>

    <string name="bike">Bycicle</string>
    <string name="decathlon" translatable="false">Decathlon</string>
    <string name="tracksuit">Adidas tracksuit</string>
    <string name="adidas">Adidas store</string>
    <string name="mirror">Round mirror</string>
    <string name="media_markt" translatable="false">Media Markt</string>
    <string name="phone" translatable="false">LG G3</string>
    <string name="amazon" translatable="false">Amazon</string>
    <string name="computer">BeBox computer</string>
    <string name="pc_box" translatable="false">PC Box</string>
    <string name="laptop">HP Laptop</string>
    <string name="pc_components" translatable="false">PC Components</string>
    <string name="sofa">Sofa</string>
    <string name="ikea" translatable="false">Ikea</string>
    <string name="dishes">Dishes</string>
</resources>
