<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.barranquero.offering.MainActivity">

    <TextView
        android:id="@+id/txvSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/txvHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvSetting"
        android:text="@string/show_home"/>

    <CheckBox
        android:id="@+id/cbxHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvSetting"
        android:layout_alignBaseline="@id/txvHome"
        android:layout_toEndOf="@id/txvHome"
        android:checked="true"/>

    <TextView
        android:id="@+id/txvElectro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvHome"
        android:text="@string/show_electro"/>

    <CheckBox
        android:id="@+id/cbxElectro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvHome"
        android:layout_alignBaseline="@id/txvElectro"
        android:layout_toEndOf="@id/txvElectro"
        android:checked="true"/>

    <TextView
        android:id="@+id/txvSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvElectro"
        android:text="@string/show_sport"/>

    <CheckBox
        android:id="@+id/cbxSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvSetting"
        android:layout_alignBaseline="@id/txvSport"
        android:layout_toEndOf="@id/txvSport"
        android:checked="true"/>

    <View
        android:id="@+id/vLine"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_vertical_margin"
        android:layout_below="@id/txvSport"
        android:background="@drawable/shape_line"/>

    <TextView
        android:id="@+id/txvImportance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vLine"
        android:text="@string/show_import"/>

    <CheckBox
        android:id="@+id/cbxImportance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vLine"
        android:layout_alignBaseline="@id/txvImportance"
        android:layout_toEndOf="@id/txvImportance"
        android:checked="true"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvImportance"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_button"
        android:text="@android:string/ok"/>
</RelativeLayout>
